--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -210,7 +210,7 @@
                       <a href="#ecommerce" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle"> <span
                           class="">Batch Timing</span> </a>
                       <ul class="list-unstyled sub-submenu collapse show eq-animated eq-fadeInUp" id="ecommerce">
-                        <li><a href="{% url 'batchTiming' %}">View Batch Timings</a>
+                        <li><a href="{% url 'batchTiming2' %}">View Batch Timings</a>
                         </li>
                         <li><a href="{% url 'postNotice' %}">Send Notice</a>
                         </li>
