--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -66,32 +66,80 @@ Institute Dashboard
 </style>
 {% endblock extra-style %}
 
+{% block notifications %}
+{% if messages %}
+{% for k in messages%}
+<div class="dropdown-item">
+  <a href="">
+    <div class="media">
+      <div class="media-body">
+        <span>
+          <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+            <b>{{ k }} !</b>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </span>
+      </div>
+    </div>
+  </a>
+</div>
+{% endfor %}
+{% else %}
+<div class="dropdown-item">
+  <a href="">
+    <div class="media">
+      <div class="media-body">
+        <span>No Notifications</span>
+      </div>
+    </div>
+  </a>
+</div>
+{% endif %}
+{% endblock notifications %}
+
+
 {% block main-content %}
 
-<div class="container-fluid"> 
+<div class="container-fluid">
+  {% if messages %}
+  {% for k in messages%}
+  <div class="dropdown-item">
+    <a href="">
+      <div class="media">
+        <div class="media-body">
+          <span>
+            <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+              <b>{{ k }} !</b>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          </span>
+        </div>
+      </div>
+    </a>
+  </div>
+  {% endfor %}
+  {% else %}
+  <div class="dropdown-item">
+    <a href="">
+      <div class="media">
+        <div class="media-body">
+          <span>No Notifications</span>
+        </div>
+      </div>
+    </a>
+  </div>
+  {% endif %}
+
 
   <br>
   <br>
   <div class="row layout-spacing ">
     <div class="col-lg-12 h-100">
-
-      {% if messages %}
-      {% for message in messages %}
-      <div {% if message.tags %} class="{{ message.tags}}" {% endif %}>
-        {{ message }}
-        <button type="button" class="close" id="override-start" data-dismiss="alert" aria-label="Close"><span
-            aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %}
-      {% endif %}
-      
       <div class="card">
-
-       
-
-
-
         <div class="card-header">
           <h2 style="color: rgb(66, 8, 8);">Add Courses</h2>
         </div>
