--- a/templates/Exam/Questionsection.html
+++ b/templates/Exam/Questionsection.html
@@ -15,13 +15,13 @@
     </div>
     {% endfor %}
     {% endif %}
-    <div>
-      <div class="col-xl-12 col-md-12 col-12 mt-5">
-              <div class="statbox widget box box-shadow">
-                  <div class="widget-header">
+    <div class="row">
+      <div class="col-xl-12 col-md-12 col-12">
+              <div class="card statbox widget box box-shadow">
+                  <div class="card-header">
                       <div class="row">
                           <div class="col-xl-12 col-md-12 col-12">
-                              <h4 class="p-2" style="color:black;"><b>List of Exams</b></h4>
+                              <h2 style="color:black;">List of Exams</h2>
                           </div>
                           
                       </div>
@@ -32,7 +32,7 @@
                        <form action="" method="post">{% csrf_token %}
                           <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                               <tr>
-                                  <th>##</th>
+                                  <th>#</th>
                                   <th>Exam Name</th>
                                   <th>Course</th>
                                   <th>Batch</th>
@@ -40,7 +40,7 @@
                                   <th>Exam Duration</th>
                                   <th>Total No. of Questions</th>
                                   <th>Pass Percentage</th>
-                                  <th colspan="2">Add Question</th>
+                                  <th class="text-center">Add Question</th>
                               </tr>
                               {% for i in exams %}
                               <tr>
@@ -52,7 +52,7 @@
                                   <td>{{i.exam_duration}}</td>
                                   <td>{{i.question_count}}</td>
                                   <td>{{i.pass_percentage}}</td>
-                                  <td>
+                                  <td class="text-center">
                                   <a href="{% url 'questions' i.id %}" class="btn btn-info p-1">Add Question</a>
                                   </td>
                               </tr>
