--- a/templates/teacher/searchUserTutor.html
+++ b/templates/teacher/searchUserTutor.html
@@ -47,14 +47,17 @@
         {% endfor %}
         {% endif %}
             <div class="card mb-4">
-                <div class="card-body">
+                <div class="card-header">
                     <div>
-                        <h2 style="color: rgb(66, 8, 8);">Results Are for searched Tutor</h2>
-                        <br>
+                        <h2 style="color: rgb(0, 0, 0);">Results Are for searched Tutor</h2>
+                    </div>
+                </div>
+
+                        <div class="card-body">
                             {% if sr %}
+                                    <div class="table-responsive">
                                     <table class="table table-striped">
                                         <!--Table head-->
-                                        <thead>
                                             <tr>
                                                 <th>Username</th>
                                                 <th>First Name</th>
@@ -63,13 +66,11 @@
                                                 <th>Pin Code</th>
                                                 <th>Phone Number</th>
                                                 <th>School Name</th>
-                                                <th></th>
+                                                <th class="text-center">Add</th>
                                             </tr>
-                                        </thead>
                                         <!--Table head-->
                                         <!--Table body-->
                                         {% for i in sr %}
-                                            <tbody>
                                                 <tr>
                                                     <td>{{i.user.username}}</td>
                                                     <td>{{i.user.first_name}}</td>
@@ -78,19 +79,18 @@
                                                     <td>{{i.pincode}}</td>
                                                     <td>{{i.phone}}</td>
                                                     <td>{{i.schoolName}}</td>
-                                                    <td>
+                                                    <td class="text-center">
                                                         <a href="{% url 'AddalreadyExistsTutor' i.id %}" class="btn btn-danger">Add</a>
                                                     </td>
                                                 </tr>
-                                            </tbody>
                                         {% endfor %}
                                         <!--Table body-->
                                     </table>
+                                </div>
                                     <!--Table-->
                                     <hr>
                             {% endif %}
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
