--- a/templates/fees/addFees.html
+++ b/templates/fees/addFees.html
@@ -308,7 +308,7 @@ input:focus{
                         <label class="control-label col-sm-4">Teaching Type<span class="text-danger">*</span></label>
                         <select class="form-control col-sm-6" id="check" name="check" style="display: inline-block;">
                             {% for teach in teachings %}
-                            <option value="{{ teach }}">{{ teach }}</option>
+                            <option value="{{ teach }}"><h5>online</h5> </option>
                             {% endfor %}
                         </select>
                     </div>
